# EIT-News-Triples

./: .gitignore  LLM_Triples_Generation.ipynb  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
Code/: About  Actor_Catalog(1).ipynb  Actor_Catalog.ipynb  EIT_HIL.ipynb  LLM_Triples_Generation.ipynb  Spacy.ipynb  config.cfg
Code/Spacy-LLM/: About.txt  EIT_Triple_Extraction_Gemma7B.ipynb  EIT_Triple_Extraction_Mistral7B.ipynb  Spacy_Gemini.ipynb  Spacy_LLM.ipynb  Spacy_LLM_Gemini (2).ipynb  Spacy_LLM_Gemini.ipynb  Spacy_LLM_Mistral.ipynb
Datasets/2008/: news_1.txt  news_2.txt  news_5.txt
Datasets/2009/: news_1.txt  news_10.txt
Datasets/2010/: news_1  news_2.txt
Datasets/2011/: news_1
Datasets/2012/: news_2.txt  news_6.txt
Datasets/2013/: news_20.txt  news_22.txt  news_36.txt  news_37.txt  news_42.txt  news_43.txt  news_44.txt  news_47.txt
Datasets/2014/: news_2.txt  news_6.txt
Datasets/2015/: news_6.txt  news_7.txt
Datasets/2016/: news_1  news_10.txt  news_6.txt
Datasets/2017/: news_10.txt  news_3.txt  news_4.txt  news_8.txt
Datasets/2018/: news_1  news_10.txt  news_3.txt  news_6.txt  news_8.txt
Images/: About
Papers/: About
Triples/: GPT_generated_triples.json  Mistral_generated_triples.json  Spacy_generated_triples.json  eit_rich_triples (2).json  mistral_generated_triples.json
Triples_Evaluation/: About.txt  triples_comparison.xlsx
UI/: EIT_Analyzer_User_Guide.txt  EIT_Backend.ipynb  EIT_constellation_analyzer.html  EIT_constellation_analyzer_UI (2).html  EIT_constellation_analyzer_UI.html  EIT_constellation_analyzer_backend.ipynb  User_Guide.txt  eit_constellation_analyzer.html  eit_triplet_extractor_backend.ipynb  index.html
mock_ui/: sociotyper-demo.html
notebooks/: sociotyper_colab.ipynb
sociotyper/: __init__.py
(+214 files in other folders)
